# mlflow-genai-tutorial

./: .env.example  .gitignore  00_setup_baseline_rag_agent.ipynb  01_mlflow_tracking_basics.ipynb  02_mlflow_tracing_autolog.ipynb  03_mlflow_tracing_custom_spans.ipynb  04_mlflow_evaluation_builtin.ipynb  CLAUDE.md  README.md  main.py  pyproject.toml
